--- a/networks/local/Makefile
+++ b/networks/local/Makefile
@@ -1,6 +1,6 @@
 # Makefile for the "gaiadnode" docker image.
 
 all:
-	docker build --tag okchain/node node
+	docker build --tag eon/node node
 
 .PHONY: all
